# MovieRecommender

./: .gitmodules  CMakeLists.txt  README.md
header/: dbElement.hpp  library.hpp  menu.hpp  recByDir.hpp  recByGenre.hpp  recByPref.hpp  recommender.hpp  searchByDirector.hpp  searchByGenre.hpp  searchByTitle.hpp  searchCriteria.hpp  searchRecommender.hpp  user.hpp
images/: placeholder.txt
src/: .recommender.cpp.swp  dbElement.cpp  library.cpp  main.cpp  menu.cpp  menu2.cpp  recByDir.cpp  recByGenre.cpp  recByPref.cpp  recommender.cpp  searchByDirector.cpp  searchByGenre.cpp  searchByTitle.cpp  searchCriteria.cpp  textToData.cpp  user.cpp
tests/: lib_test.cpp  rec_test.cpp  recommender_tests.cpp  sc_test.cpp  search_director_test.cpp  search_genre_test.cpp  search_title_test.cpp  srec_test.cpp  test.cpp  user_test.cpp
user_data/: Joe.txt  May.txt
